--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jalali-moment": "^3.3.11",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tanstack/eslint-plugin-query": "^5.83.1",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
